Closed Bug 761496 Opened 13 years ago Closed 13 years ago

Cannot launch multiple different native applications on linux - all apps launch the 1st app

Categories

(Firefox Graveyard :: Web Apps, defect)

15 Branch
x86_64
Linux
defect
Not set
normal

Tracking

(firefox15 verified)

VERIFIED FIXED
Firefox 16
Tracking Status
firefox15 --- verified

People

(Reporter: jsmith, Assigned: marco)

References

Details

(Whiteboard: [qa!])

Attachments

(1 file)

Steps: 1. Go to apps.mozillalabs.com/appdir 2. Install two distinct apps 3. Launch both apps in succession Expected: Each app should be launched in different windows running content specific to each app. Actual: Launching the 2nd app launches another window of the 1st app originally launched. Example: Install LucidChart and Mozilla QA WebRT Tester. Launch LucidChart. Launch Mozilla QA WebRT Tester. Result - LucidChart is launched twice Linux OS: Ubuntu 11
I think this might be related to this bug: https://bugs.launchpad.net/unity/+bug/692462
(In reply to Yann Brelière from comment #1) > I think this might be related to this bug: > https://bugs.launchpad.net/unity/+bug/692462 Sounds like it. Can someone confirm what happens with this bug on a build with the most recent fix applied to that unity bug?
Just to bring information from my dupe (sorry about that): this isn't Unity-specific as it happens to me with GNOME 3 on Fedora, too.
Assignee: nobody → mar.castelluccio
Status: NEW → ASSIGNED
Attached patch PatchSplinter Review
Comment on attachment 630689 [details] [diff] [review] Patch ok, so it was the same problem as bug 747409
Attachment #630689 - Flags: review+
(In reply to Felipe Gomes (:felipe) from comment #6) > Comment on attachment 630689 [details] [diff] [review] > Patch > > ok, so it was the same problem as bug 747409 Can someone file a bug to refactor common functionality here? The code here makes me think there's code duplication going on here.
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [qa+:jsmith]
Marco - Feel free to nominate this bug to uplift to Aurora.
Comment on attachment 630689 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): This is a simple improvement for the webapps support on Linux. User impact if declined: Linux users won't be able to launch multiple different applications. Testing completed (on m-c, etc.): The same fix has already been tested in the Windows version. Risk to taking this patch (and alternatives if risky): There isn't any risk in this patch. If it isn't uplifted to Aurora, Linux users won't be able to launch multiple different applications. String or UUID changes made by this patch: None.
Attachment #630689 - Flags: approval-mozilla-aurora?
Verified on Nightly.
Status: RESOLVED → VERIFIED
Whiteboard: [qa+:jsmith] → [qa!]
Flags: in-moztrap?(mar.castelluccio)
(In reply to Jason Smith [:jsmith] from comment #10) > Marco - Feel free to nominate this bug to uplift to Aurora. Is this needed on FF15? All other basecamp work appears to be landing in FF16.
(In reply to Alex Keybl [:akeybl] from comment #13) > (In reply to Jason Smith [:jsmith] from comment #10) > > Marco - Feel free to nominate this bug to uplift to Aurora. > > Is this needed on FF15? All other basecamp work appears to be landing in > FF16. Note - desktop web runtime applies to k9o, not basecamp. The uplift to Aurora needed if we intend to support linux web apps for FF 15, as this breaks basic smoke test functionality (and it's a low risk patch).
(In reply to Jason Smith [:jsmith] from comment #14) > Note - desktop web runtime applies to k9o, not basecamp. > > The uplift to Aurora needed if we intend to support linux web apps for FF > 15, as this breaks basic smoke test functionality (and it's a low risk > patch). But basecamp is a subset of k90 that ships first, so why would we take this in FF15? Has product weighed in on when web app support needs to first land?
Most of the webapps work landed for FF15, except for a few bugs marked as blockers which will then be discussed by product/release drivers if we can uplift those fixes or not. This bug should probably be marked as one of those blockers, but since it's a very simple patch we just straight nominated it to aurora.
Alex - We currently have code active for desktop web runtime in FF 15, including basic linux web apps support. We're currently going to remain in Aurora and make the determination if we should or shouldn't remain on the FF 15 near the end of beta. We were looking to uplift this patch, given the low risk to high value benefit this has to the current implementation of web apps on linux on FF 15 on Aurora. Does this make sense?
(In reply to Jason Smith [:jsmith] from comment #17) > Does this make sense? Yes, thanks for the clarification.
Attachment #630689 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [qa!] → [qa+]
I've added the "Launch multiple applications" test case. It depends on other test cases, let me know if this is acceptable or if test cases should be completely self-contained.
Flags: in-moztrap?(mar.castelluccio) → in-moztrap+
QA Contact: jsmith
Whiteboard: [qa+] → [qa!]
Product: Firefox → Firefox Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: