Bug 761496. Cannot launch multiple native webapps on Linux. r=felipe